# textual-inputs

./: .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: python-publish.yml
examples/: simple_form.py  styling.py
src/textual_inputs/: __init__.py  boolean_input.py  events.py  integer_input.py  styling.py  text_input.py
