[metadata]
name = textual-inputs
version = attr: textual_inputs.__version__
author = Tom Saunders
license = MIT License
license_files = LICENSE
description = textual-inputs is a collection of input widgets for the Textual TUI framework
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sirfuzzalot/textual-inputs
project_urls =
    Tracker = https://github.com/sirfuzzalot/textual-inputs/issues
    Documentation = https://github.com/sirfuzzalot/textual-inputs
    Source = https://github.com/sirfuzzalot/textual-inputs
classifiers =
    Development Status :: 2 - Pre-Alpha
    License :: OSI Approved :: MIT License
    Environment :: Console
    Intended Audience :: Developers
    Operating System :: MacOS
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    textual >= 0.1.10,< 0.2

[options.packages.find]
where = src
